# I-JEPA-Model-Implementation-

./: .gitignore  README.md  pyproject.toml
src/: model.ipynb
src/utils/: help.ipynb
